# cozmik-studio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Gifs/cozmik_studio_screensaver_gifs/: README.txt
packaging/applications/: cozmik-studio.desktop  streamdeck-studio.desktop
packaging/udev/: 70-streamdeck-studio.rules
scripts/: install-user.sh  uninstall-user.sh
streamdeck_studio/: __init__.py  __main__.py  action_icons.py  actions.py  deck.py  diagnostics.py  gtk_ui.py  images.py  importers.py  mcp_server.py  model.py  plugin_helpers.py  plugins.py  tray_indicator.py
streamdeck_studio/resources/plugin-library/: desktop-tools.json  home-assistant.json  media-player.json  notifications.json  sengled-home.json  smart-life.json  sunco-smart-lighting.json  tuya-cloud.json  wled.json  yolink.json
tests/: test_action_icons.py  test_actions.py  test_deck.py  test_diagnostics.py  test_gtk_ui.py  test_images.py  test_importers.py  test_mcp_server.py  test_model.py  test_packaging.py  test_plugins.py
