[project]
name = "cozmik-studio"
version = "0.1.1"
description = "Linux button programmer and launcher app for Stream Deck devices"
requires-python = ">=3.11"
dependencies = [
  "Pillow",
  "streamdeck",
]

[project.scripts]
cozmik-studio = "streamdeck_studio.gtk_ui:run"
cozmik-studio-mcp = "streamdeck_studio.mcp_server:main"
streamdeck-studio = "streamdeck_studio.gtk_ui:run"
streamdeck-studio-mcp = "streamdeck_studio.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
streamdeck_studio = [
  "resources/action-images/*",
  "resources/action-images/*/*",
  "resources/action-images/*/*/*",
  "resources/branding/*",
  "resources/plugin-library/*",
  "resources/screensavers/*",
]

[tool.setuptools.packages.find]
include = ["streamdeck_studio*"]

[tool.setuptools.data-files]
"share/applications" = ["packaging/applications/dev.local.CozmikStudio.desktop"]
"share/icons/hicolor/256x256/apps" = ["packaging/icons/cozmik-studio.png"]

[tool.pytest.ini_options]
pythonpath = ["."]
